[gd_scene load_steps=6 format=3 uid="uid://5cs46ma1usob"]

[ext_resource type="Script" path="res://scenes/maps/base_map/map.gd" id="1_c7js5"]
[ext_resource type="Script" path="res://scenes/maps/base_map/loot_box_spawner.gd" id="3_hu4k6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yqaei"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_lg7mw"]
sky_material = SubResource("ProceduralSkyMaterial_yqaei")

[sub_resource type="Environment" id="Environment_u0j8b"]
background_mode = 2
sky = SubResource("Sky_lg7mw")
tonemap_mode = 2

[node name="Map" type="Node3D"]
script = ExtResource("1_c7js5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u0j8b")

[node name="LootBoxSpawnPositions" type="Node3D" parent="."]

[node name="PlayerSpawnPositions" type="Node3D" parent="."]

[node name="LootBoxSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/entities/loot_box.tscn")
spawn_path = NodePath(".")
script = ExtResource("3_hu4k6")
